--- a/html/latihan-dasar-html/2paragraf.html
+++ b/html/latihan-dasar-html/2paragraf.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Latihan HTML 1</title>
+</head>
+
+<body>
+  
+    <!-- contoh tag h1 - h6 dan p -->
+    <h1>Judul</h1>
+    <h2>Penulis</h2>
+    <p>e-mail :</p>
+
+</html>
