--- a/html/latihan-dasar-html/2paragraf.html
+++ b/html/latihan-dasar-html/2paragraf.html
@@ -9,9 +9,31 @@
 
 <body>
   
-    <!-- contoh tag h1 - h6 dan p -->
-    <h1>Judul</h1>
-    <h2>Penulis</h2>
-    <p>e-mail :</p>
+    <!-- contoh tag h1 - h6, p, hr, br -->
+    <!-- <p> untuk paragraf <br> untuk memberi spasi antar paragraf -->
+    <p>Ini paragraf 1</p>
+    <br>
+
+    <p>Ini adalah <br> paragraf 2</p>
+    <hr>
+
+    <p>
+        <b>
+            <!-- untuk bold -->
+            Selamat Datang
+        </b>
+
+        <i>
+            <!-- untuk tulisan menjadi miring italic -->
+            di Web pertama saya
+        </i>
+    </p>
+
+    <p>Nama saya
+        <u>
+            <!-- untuk garis di bawah teks -->
+            Rizky Adhita Saputra
+        </u>
+    </p>
 
 </html>
