--- a/html/latihan-dasar-html/2paragraf.html
+++ b/html/latihan-dasar-html/2paragraf.html
@@ -35,5 +35,25 @@
             Rizky Adhita Saputra
         </u>
     </p>
+    <!-- tag <hr> untuk memberi garis horizontal -->
+    <hr>
+
+    <p>
+        <!-- untuk <strong> sama kaya bold -->
+        <strong>
+            Pengumuman !
+        </strong>
+        <br>
+
+        <b>
+            Saya proses menjadi programer gaji 3 digit
+        </b>
+        <br>
+
+        <!-- untuk <em> membuat teks menjadi italic -->
+        <em>
+            Doakan ya teman
+        </em>
+    </p>
 
 </html>
