--- a/html/latihan-dasar-html/3heading.html
+++ b/html/latihan-dasar-html/3heading.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Belajar Web</title>
+</head>
+<body>
+    
+    <!-- tag header ada h1 - h6 -->
+    <h1>Judul Artikel</h1>
+    <p>isi artikel</p>
+    <h2>Sub Judul</h2>
+    <p>sub judul body artikel</p>
 
+</body>
+</html>
