--- a/html/latihan-dasar-html/4list.html
+++ b/html/latihan-dasar-html/4list.html
@@ -1,1 +1,59 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Belajar Web List</title>
+</head>
+<body>
+    
+    <!-- tag untuk list ada ol, ul, dl -->
+    <h3>Jadwal Belajar</h3>
+    <!-- urutan menggunakan angka -->
+    <!-- jika ingin merubah agar tidaka angka -->
+    <!-- contoh 1, A, a, I, i -->
+    <!-- jadi menggunakan atribut "type" -->
+    <ol> 
+        <li>Belejar jam 1 malam</li>
+        <li>Belajar jam 2 malam</li>
+        <li>Belajar jam 3 malam</li>
+    </ol>
 
+    <!-- contoh atribut type -->
+    <ol type="a"> 
+        <!-- disini saya menggunakan "a" agar list awalnya menggunakan a -->
+        <li>Belejar jam 1 malam</li>
+        <li>Belajar jam 2 malam</li>
+        <li>Belajar jam 3 malam</li>
+    </ol>
+
+    <!-- urutan menggunakan bullet -->
+    <!-- ada type yang bisa digunakan yaitu: -->
+    <!-- disc, square, circle -->
+
+    <h3>Alasan belum tidur</h3>
+    <ul>
+        <li>belum ngantuk</li>
+        <li>belajar</li>
+        <li>scroll tiktok</li>
+    </ul>
+
+    <!-- contoh menggunakan atribut type pada <ul> -->
+    <ul type="square">
+        <!-- disini saya menggunakan "square" agar list akan berubah menjadi kotak -->
+        <li>belum ngantuk</li>
+        <li>belajar</li>
+        <li>scroll tiktok</li>
+    </ul>
+
+    <h3>Belajar Web</h3>
+    <!-- ini untuk membuat term dan description -->
+    <dl>
+        <dt>HTML</dt>
+        <dd>Hypertext Markup Language</dd>
+        <dt>CSS</dt>
+        <dd>Cascading Style Sheet</dd>
+    </dl>
+
+</body>
+</html>
