--- a/html/latihan-dasar-html/5hyperlink.html
+++ b/html/latihan-dasar-html/5hyperlink.html
@@ -1,1 +1,45 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Belajar Web List</title>
+</head>
+<body>
+    
+    <!-- tag untuk link menggunakan <a>...</a> -->
+    <p>Membuat external link</p>
+    <p>Klik <a href="https://www.youtube.com/">disini</a> untuk menonton YouTube</p>
 
+    <p><b>Membuat internal link</b></p>
+    <p>Coba klik <a href="4list.html">disini</a> untuk melihat halaman list</p>
+    <!-- Jika file didalam folder -->
+    <p>Coba klik <a href="/heading/3heading.html">ini</a> jika ingin membuka heading</p>
+
+    <!-- membuat page anchor(agar bisa otomatis scroll ke halaman yang di inginkan) -->
+    <ul>
+        <li>
+            <a href="#bagian1">ke bagian 1</a>
+        </li>
+
+        <li>
+            <a href="#bagian2">ke bagian 2</a>
+        </li>
+    </ul>
+
+    <h2 id="bagian1">bagian 1</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum quidem, iure sed necessitatibus assumenda quibusdam. Provident modi laboriosam, molestias saepe nulla vitae, beatae aliquam repudiandae itaque iste quaerat incidunt voluptates!</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam officia consectetur, perferendis necessitatibus quo voluptatem fugit iure aspernatur amet, molestiae corrupti animi voluptatibus ducimus dignissimos omnis unde beatae ex error!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum iure ex dignissimos quod error ipsam nam. Natus commodi quisquam aut, nihil quae tempora vel nam maxime? Voluptatum veritatis vel tenetur?</p>
+
+    <br><br><br><br><br><br><br><br><br><br><br>
+
+    <h2 id="bagian2">bagian 2</h2>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi placeat dolor quam quasi nesciunt illo dignissimos vel quos odio ipsam? Nihil facilis ullam dolor maiores excepturi deserunt. Laboriosam, accusantium id.</p>
+    
+    <br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br>
+
+</body>
+</html>
