--- a/html/latihan-dasar-html/6img.html
+++ b/html/latihan-dasar-html/6img.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Belajar Web Image</title>
+</head>
+<body>
 
+    <p>Memasukan Hyperlink</p>
+    <a href="https://logos-world.net/real-madrid-logo/">
+        <img src="img/Real-Madrid-symbol.png" alt="logo Real Madrid" width="70%">
+    </a>
+
+    <p>untuk width dan height</p>
+    <img src="img/Real-Madrid-symbol.png" width="30%" height="30%">
+    
+    <p>Untuk title</p>
+    <img src="img/Real-Madrid-symbol.png" title="logo real madrid">
+
+    <img src="img/bg-img.jpg" alt="BG WEBNYA">
+
+</body>
+</html>
