--- a/html/latihan-dasar-html/form+table.html
+++ b/html/latihan-dasar-html/form+table.html
@@ -1,1 +1,68 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Latihan</title>
+</head>
+<body>
+    <form action="#">
+        <table border="0" cellspacing="0" cellpadding="10">
+            <tr>
+                <td align="right">
+                    <label for="username">Username :</label>
+                </td>
+                <td>
+                    <input type="text" id="username">
+                </td>
+            </tr>
+            <tr>
+                <td align="right">
+                    <label for="password">Password :</label>
+                </td>
+                <td>
+                    <input type="password" id="password">
+                </td>
+            </tr>
+            <tr>
+                <td align="center" colspan="2">
+                    <label for="radio">Radio 1</label><input type="radio" id="radio 1">
+                    <label for="radio">Radio 2</label><input type="radio" id="radio 2">
+                </td>
+            </tr>
 
+            <tr>
+                <td>
+                    <label for="select">Combo Box :</label>
+                </td>
+                <td>
+                    <select name="combo_box" id="option">
+                        <option value="#">Indonesia</option>
+                        <option value="#">Korea</option>
+                        <option value="#">Inggris</option>
+                    </select>
+                </td>
+            </tr>
+
+            <tr>
+                <td align="right">
+                    <label for="textarea">Text Area :</label>
+                </td>
+                <td>
+                    <textarea id="textarea"></textarea>
+                </td>
+            </tr>
+
+            <tr>
+                <td align="center" colspan="2">
+                    <button>
+                        Button
+                    </button>
+                </td>
+            </tr>
+
+            
+        </table>
+    </form>
+</body>
+</html>
