--- a/css/embed.html
+++ b/css/embed.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Latihan CSS Embed</title>
+    <style>
+        body {
+            font-family: arial;
+        }
 
+        h1{
+            color: lightblue;
+        }
+
+        p{
+            line-height: 1.6em;
+            color: grey;
+        }
+    </style>
+</head>
+
+<body>
+    <h1>Hello World</h1>
+
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, nulla sunt itaque velit reiciendis blanditiis consequuntur, commodi, quibusdam accusantium similique molestiae unde. Quidem nostrum eligendi labore placeat odit repudiandae ullam?
+    </p>
+</body>
+</html>
