--- a/css/pertemuan1/external.html
+++ b/css/pertemuan1/external.html
@@ -1,1 +1,19 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Latihan CSS External</title>
+    <link rel="stylesheet" href="external-style.css">
+</head>
 
+<body>
+    <h1>
+        Hello World
+    </h1>
+
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, nulla sunt itaque velit reiciendis blanditiis consequuntur, commodi, quibusdam accusantium similique molestiae unde. Quidem nostrum eligendi labore placeat odit repudiandae ullam?
+    </p>
+</body>
+</html>
