--- a/css/latihan5/selector.html
+++ b/css/latihan5/selector.html
@@ -1,1 +1,42 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Latihan CSS Selector</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 
+<body>
+    
+    <h1>Hello World</h1>
+
+    <ul>
+        <li><a href="#">Link 1</a></li>
+        <li><a href="#">Link 2</a></li>
+        <li><a href="#">Link 3</a></li>
+        <li><a href="#">Link 4</a></li>
+        <li><a href="#">Link 5</a></li>
+    </ul>
+
+    <ol>
+        <li><a href="#">Link 6</a></li>
+        <li><a href="#">Link 7</a></li>
+        <li><a href="#">Link 8</a></li>
+        <li><a href="#">Link 9</a></li>
+        <li><a href="#">Link 10</a></li>
+    </ol>
+
+    <a href="#">Belajar CSS</a>
+
+    <h2>Judul Artikel</h2>
+
+    <p id="p1">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus minus consequatur sunt esse, cum velit optio eligendi ab nostrum temporibus deserunt. Voluptatibus maiores in magni amet delectus numquam optio voluptas!
+    </p>
+    <br>
+
+    <p class="p2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates consectetur eius consequatur harum eveniet ratione voluptatem quod eligendi asperiores consequuntur, nulla ipsam aperiam reiciendis facilis ab nam assumenda a ex.</p>
+
+</body>
+</html>
