--- a/css/latihan6/pseudo.html
+++ b/css/latihan6/pseudo.html
@@ -1,1 +1,46 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Latihan CSS Selector</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <a href="#" class="hello">Hello World</a>
+
+    <ul>
+        <!-- ul seeprti orang tua -->
+         <!-- contohnya : ada berapa anak(child) dari ul -->
+          <!-- jawabannya ada 10 yaitu dari li -nya -->
+        <!-- li seperti anak dari ul -->
+         <!-- ada berapa anak dari li -->
+          <!-- jawabannya ada 1, hanya ada a saja pada setiap li -->
+        <!-- a ini seperti anak dari li -->
+        <li><a href="#">Link 1</a></li>
+        <li><a href="#">Link 2</a></li>
+        <li><a href="#">Link 3</a></li>
+        <li><a href="#">Link 4</a></li>
+        <li><a href="#">Link 5</a></li>
+        <li><a href="#">Link 6</a></li>
+        <li><a href="#">Link 7</a></li>
+        <li><a href="#">Link 8</a></li>
+        <li><a href="#">Link 9</a></li>
+        <li><a href="#">Link 10</a></li>
+    </ul>
+
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus minus consequatur sunt esse, cum velit optio
+        eligendi ab nostrum temporibus deserunt. Voluptatibus maiores in magni amet delectus numquam optio voluptas!
+    </p>
+    <br>
+
+    <p class>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates consectetur eius consequatur harum
+        eveniet ratione voluptatem quod eligendi asperiores consequuntur, nulla ipsam aperiam reiciendis facilis ab nam
+        assumenda a ex.</p>
+
+</body>
+
+</html>
