--- a/css/latihan7/inheritance.html
+++ b/css/latihan7/inheritance.html
@@ -1,1 +1,25 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Latihan CSS Inheritance</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    
+    <h1>
+        Hello World
+    </h1>
+
+    <a href="#">Kembali ke Dashboard</a>
+
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor consectetur eligendi eos libero perspiciatis optio, nemo sit cupiditate quas eveniet, enim reiciendis maiores hic quidem magnam alias quo laudantium. Necessitatibus?
+    </p>
+
+</body>
+
+</html>
